--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,6 @@ before_script:
   - npm install phantomjs
   - npm install gulp-jasmine-browser
   - npm install gulp-uglify
-script: gulp test
+  - npm install jshint gulp-jshint
+  - npm install gulp-rename
+script: gulp travis
