--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "colorme",
-  "homepage": "https://github.com/kcthota/colorMe",
+  "homepage": "https://github.com/kcthota/colorme",
   "authors": [
     "Krishna Chaitanya Thota <kcthota@gmail.com>"
   ],
